# software-agents

./: README.md  pyproject.toml
src/software_crew/: crew.py  main.py
src/software_crew/config/: agents.yaml  tasks.yaml
