[project]
name = "software_crew"
version = "0.1.0"
description = "software-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
software_crew = "software_crew.main:run"
run_crew = "software_crew.main:run"
train = "software_crew.main:train"
replay = "software_crew.main:replay"
test = "software_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
